<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/item_image"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/no_image" />
            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:layout_marginStart="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                android:id="@+id/item_name"
                android:text="@string/restourant_name"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <TextView

                android:layout_marginTop="70dp"
                android:textColor="@android:color/white"
                android:id="@+id/item_desc"
                android:layout_marginStart="5dp"

                android:textAlignment="viewStart"
                android:text="@string/descripstion"
                android:textSize="17sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/item_price"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/price_epe"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="27sp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:id="@+id/qun_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_below="@+id/item_price"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/increment"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/increment"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="33sp" />

                    <TextView
                        android:id="@+id/quntity"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="5dp"

                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@color/colorAccent"
                        android:textSize="23sp" />

                    <Button
                        android:id="@+id/decrement"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/decrement"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="33sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/add"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item_desc"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/buttons"
                    android:text="Add to Cart"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textSize="19sp" />


            </RelativeLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>





</LinearLayout>