<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/note"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:text="@string/notice"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="229dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:padding="15dp"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <TextView
        android:layout_above="@+id/recyclerviewAddressSpinner"
        android:gravity="center"
        android:id="@+id/title_tv"
        android:text="select your address to sebd order to it.."
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewAddressSpinner"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginBottom="100dp"
        android:textAlignment="center"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"


        />


    <LinearLayout
        android:id="@+id/order_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-18dp"
        android:background="@drawable/order_btn"
        android:orientation="horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="28sp">


        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/frame"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_cost"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons"
            android:text="@string/confirm" />


    </LinearLayout>

</RelativeLayout>