<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        app:cardCornerRadius="50dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="15dp"
            android:background="@drawable/frame"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:background="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/deleteItem"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/delete" />

                    <TextView
                        android:id="@+id/item_name"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/restourant_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp" />


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@+id/deleteItem"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        android:gravity="center"
                        android:text="@string/price"

                        android:textColor="@color/colorAccent"
                        android:textSize="27sp" />

                    <TextView
                        android:id="@+id/item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@id/deleteItem"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@color/colorAccent"

                        android:textSize="27sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@+id/item_price"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="00dp"
                        android:layout_marginEnd="50dp"
                        android:text="quentity:"
                        android:textColor="@color/colorAccent"
                        android:textSize="27sp" />

                    <TextView
                        android:id="@+id/item_quentity"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@+id/item_price"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="00dp"
                        android:layout_marginEnd="10dp"
                        android:text="0"
                        android:textColor="@color/colorAccent"
                        android:textSize="27sp" />
                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="35dp"
            android:id="@+id/item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="-2dp"
            android:src="@drawable/no_image"
            />
    </androidx.cardview.widget.CardView>







</RelativeLayout>